# ChangeLog for media-plugins/modplugbmp
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/modplugbmp/ChangeLog,v 1.1 2004/12/16 16:11:56 chainsaw Exp $

*modplugbmp-2.05 (16 Dec 2004)

  16 Dec 2004; Tony Vroon <chainsaw@gentoo.org> +modplugbmp-2.05.ebuild:
  Initial commit, ebuild based on the one submitted by will@johnstonclan.net
  in bug #71880.
